--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,8 @@
         "doctrine/data-fixtures": "^1.2",
         "doctrine/orm": "^2.5.11",
         "psr/log": "^1.0",
-        "symfony/finder": "^3.4 || ^4.0",
-        "symfony/framework-bundle": "^3.4.24 || ^4.0",
+        "symfony/finder": "^3.4 || ^4.0 || ^5.0",
+        "symfony/framework-bundle": "^3.4.24 || ^4.0 || ^5.0",
         "theofidry/alice-data-fixtures": "^1.0"
     },
     "require-dev": {
